# rtabmap

./: .appveyor.yml  CMakeLists.txt  gpt helping me .appveyor.yml
corelib/: CMakeLists.txt
corelib/src/: CMakeLists.txt
corelib/src/camera/: CameraFreenect.cpp
